css/game-pension-style.css
@font-face {
    font-family:'SparkasseHead';
    src:url(../fonts/sparkasse_professionel/SparkasseHead_Rg.eot) format('embedded-opentype'),url(../fonts/sparkasse_professionel/SparkasseHead_Rg.woff) format('woff'),url(../fonts/sparkasse_professionel/SparkasseHead_Rg.ttf) format('truetype');
    font-weight:bold;
    font-style:normal
}

@font-face {
    font-family:'Sparkasse';
    src:url(../fonts/sparkasse_professionel/SparBd.eot) format('embedded-opentype'),url(../fonts/sparkasse_professionel/SparBd.woff) format('woff'),url(../fonts/sparkasse_professionel/SparBd.ttf) format('truetype');
    font-weight:bold;
}


*:focus {
    outline: none;
}


@media screen and (max-width: 965px) {
  .if6_opener .ty1 div.overlay {
    display: block;
  }
  .if6_opener {
    height: auto;
  }

  .if6_opener .opener_image {
    position: relative;
    overflow: hidden;
  }

  .if6_opener .opener_inner {
    width: 100%;
    max-width: 100%;
    height: auto;
    padding-left: 0;
  }
}


#App {
  margin-top: -15px;
}



#Game {
  position: absolute;
  top: 120px;  
}

.noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.if6_opener .ty1 .linktext {
  padding-top: 0;
}

.text h1 {
  margin-top: -7px;
}

@media screen and (max-width: 999px) {
  .text h1 {
    margin-top: -6px;
  }
}

h1.card-title {
  white-space: nowrap;
  font-size: 39px;
}

@media screen and (max-width: 999px) {
  h1.card-title {
    white-space: normal;
    font-size: 20px;
  }
}

.if6_breadcrumb {
  margin-bottom: 10px;
}

@media screen and (max-width: 999px) {
  h1.card-title {
    white-space: normal;
  }
}

.if6_buttonline div.greyed-out-btn {
  background-color: #777;
}

.no-touch .if6_buttonline div.greyed-out-btn:hover a:after {
  color: #777;
}

.sparkasse-bolder {
  font-family: Sparkasse;
}

@media screen and (max-width: 600px) {
  .sparkasse-bolder {
    font-family: SparkasseRg;
  }
}

/* HEADER FIX */

.header-image {
  height: 100%;
  position: absolute;
  width: 100%;
}


/* HEADER IMAGE */

.img-container {
  position: relative;
  margin-bottom: 24px;
}

.text-logo-container {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.text-logo {
  position: absolute;
  font-size: 3em;
  background-color: red;
  padding: 20px 20px 20px 20px;
  color: white;
  width: 322px;
  bottom: 61px;
}

.text-logo h1 {
  font-family: SparkasseHead;
  color: white;
  font-size: 55px;
  line-height: 66px;
  margin-top: 20px;
  margin-bottom: 10px;
}

.text-logo h3 {
  font-size: 16px;
  color: white;
  line-height: 19px;
  margin: 0 0 14px 0;
}

#TitleStartButton img {
  vertical-align: middle;
}


.question-cards-section {
  position: relative;
}

.question-card-section {
/*   margin-top: 20px; */
  top: 0;
  position: absolute;
}

.current-question-card {
  position: relative;
}

/* OPENER */

/* .if6_opener {
  height: 100%;
}

.if6_outer.if6_openerstage .if6_inner {
  max-width: 100%;
  height: 100%;
}

.if6_opener .ty1 div.overlay {
  width: 360px;
  position: absolute;
  bottom: 65px
}

.if6_opener .ty1 h2 {
  color: #fff;
  font: 55px SparkasseHead,Arial,sans-serif;
  font-weight: bold;
  line-height: normal;
  margin-bottom: 20px;
}

.if6_opener .ty1 h1 {
    font-size: 16px;
    line-height: normal;
    font-weight: bold;
} */

/* SLIDERS */

.ui-handle-text {
  position: absolute;
  width: 100%;
  text-align: center;
  top: -30px;
  color: red;
  white-space: nowrap;
  font-size: 17px;
}

.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br {
  border-radius: 0;
}

/* pension-result-slider -> pension-simple-slider */

.pension-simple-slider {
  margin: 50px 0;
}

.pension-simple-slider .ui-slider-handle {
  width: 30px;
  height: 30px;
  top: -13.5px;
  border-radius: 50%;
  background: white;
  cursor: pointer;
  margin-left: -15px;
}

.ui-widget {
  font-family: SparkasseRg;
}

.pension-simple-slider .ui-slider-handle:focus,
.pension-slider .ui-slider-handle:focus {
  outline: none;
}

.pension-simple-slider.ui-widget-content {
  border: none;
  background: #F0F0F0;
}

.pension-simple-slider.ui-slider-horizontal {
  height: 5px;
}

.pension-simple-slider .ui-slider-range-min {
  background: red;
}

.pension-simple-slider .min,
.pension-simple-slider .max {
  font-family: SparkasseRg;
  font-size: 14px;
  color: #666666;
  position: absolute;
  top: 17px;
}

.pension-simple-slider .max {
  right: 0;
}

.pension-simple-slider .value {
  color: red;
  font-size: 17px;
  position: absolute;
  right: 0;
  top: -42px;
}



@media screen and (max-width: 839px) {
  .pension-simple-slider .ui-slider-handle {
    width: 40px;
    height: 40px;
    margin-left: -20px;
    top: -19px;
    background: white;
  }

  .pension-simple-slider .min,
  .pension-simple-slider .max {
    top: 23px;
  }
}

/* pension-slider->pension-question-slider */

.pension-question-slider.ui-widget-content {
  background: white;
  border: none;
  background-color: red;
  display: inline-block;
  outline: none;
  width: 100%;
}

.pension-question-slider.ui-slider-horizontal {
  height: 12px;
}

.pension-question-slider .ui-widget-header {
  background: red;
}

.pension-question-slider .ui-slider-handle {
  background: red;
  width: 60px;
  height: 60px;
  border-radius: 50%;
  border: 1px solid red;
  margin-left: -31px;
  margin-top: -27px;
  top: 0;
  left: 0;
  -webkit-transition: all 1s;
  -moz-transition: all 1s;
  -ms-transition: all 1s;
  -o-transition: all 1s;
  transition: all 1s;
  cursor: pointer;
}

@media screen and (max-width: 999px) {
  .pension-question-slider .ui-slider-handle {
    width: 50px;
    height: 50px;
    margin-left: -25px;
    margin-top: -21px;
  }
}
/* ... */

